# xsbs

./: .gitignore  CMakeLists.txt  LICENSE  README  sauer.lo  server-init.cfg
src/: CMakeLists.txt
src/enet/: CMakeLists.txt  Makefile  config.status  configure
src/enet/.deps/: callbacks.Po  host.Po  list.Po  packet.Po  peer.Po  protocol.Po  unix.Po
src/enet/include/: Makefile
src/engine/: LICENSE.txt  command.cpp  server.cpp
src/fpsgame/: aiman.h  capture.h  ctf.h  extinfo.h  game.h  logging.cpp  logging.h  server.cpp  server.h
src/pycontrol/: event.cpp  event.h  eventmanager.cpp  eventmanager.h  eventtable.cpp  eventtable.h  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h  sbcs.cpp  sbcs.h  sbpy.cpp  sbpy.h  server.h  servermodule.cpp  servermodule.h
src/pyscripts/: commandmanager.py  events.py  plugins.py  sbevents.py  sbplugins.py  sbtools.py  settings.py  socketmonitor.py  timermanager.py  xsbs.sql
src/pyscripts/Banner/: banner.py  plugin.conf
src/pyscripts/Bans/: bans.py  plugin.conf
src/pyscripts/BlockMsgCommands/: blockmsgcmd.py  plugin.conf
src/pyscripts/CheatDetection/: cheatdetect.py  plugin.conf
src/pyscripts/ClanTagProtection/: plugin.conf  tagprotect.py
src/pyscripts/ClanWar/: clanwar.py  plugin.conf
src/pyscripts/Config/: .maprotation.conf.swp  banner.conf  bans.conf  cheatdetection.conf  db.conf  demorecord.conf  dynamicresize.conf  gameawards.conf  gamenotifications.conf  geoip.conf  help.conf  httpserver.conf  im.conf  ircbot.conf  logging.conf  maprotation.conf  mapvote.conf  masterclient.conf  motd.conf  mute.conf  mytime.conf  namesdb.conf  nospam.conf  notk.conf  ownage.conf  pinglimiter.conf  sauerhelp.conf  server.conf  servercommands.conf  stats.conf  translate.conf  ui.conf  usermanager.conf  userprivilege.conf  userstats.conf  votekick.conf
src/pyscripts/DB/: db.py  plugin.conf
src/pyscripts/DuelMode/: duel.py  plugin.conf
src/pyscripts/DynamicResize/: dynresize.py  plugin.conf
src/pyscripts/GameAwards/: awards.py  plugin.conf
src/pyscripts/GeoIp/: geoip.py  (+1 more)
src/shared/: CMakeLists.txt  command.h  crypto.cpp  ents.h  geom.h  iengine.h  igame.h  tools.cpp  tools.h
src/tools/: logging.cpp  logging.h
src/webadmin/: .classpath  .project  README.txt  build.xml  testWebApp.launch  xsbsAdmin.launch
src/xsbs/: sbcs.cpp
(+236 files in other folders)
